# ministackmachine

./: CMakeLists.txt  README.md  instructions.cpp  instructions.h  interpreter.cpp  interpreter.h  main.cpp
test/: CMakeLists.txt  interpreter_test.cpp
